--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "html2canvas": "^1.4.1",
     "json2csv": "^6.0.0-alpha.2",
     "lucide-react": "^0.514.0",
+    "marked": "^17.0.3",
     "next": "14.2.35",
     "next-auth": "^4.24.12",
     "postcss": "^8.5.4",
@@ -67,6 +68,8 @@
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
+    "turndown": "^7.2.2",
+    "turndown-plugin-gfm": "^1.0.2",
     "web-vitals": "^4.2.4",
     "zod": "^3.25.76"
   },
@@ -81,6 +84,7 @@
     "@types/react": "^18.2.49",
     "@types/react-dom": "^18.2.18",
     "@types/recharts": "^1.8.29",
+    "@types/turndown": "^5.0.6",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.34.0",
     "@typescript-eslint/parser": "^8.34.0",
