--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "14.2.35",
     "next-auth": "^4.24.12",
     "postcss": "^8.5.4",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "18.2.0",
